Fix input box padding styles causing inputs to not display correctly on Firefox.

--- a/client/css/globals/custom.styl
+++ b/client/css/globals/custom.styl
@@ -54,12 +54,18 @@ body
 			left auto
 			right 10px
 
-input, .input, textarea
+input, textarea
 	border-radius 0
-	padding 15px 10px
 	background $csLightGray
 	color $csBlack
 	font-family $buttonFont
+
+textarea
+	padding 15px 10px
+
+input
+	padding 6px 10px
+	height auto
 
 .btn, .btn-group .btn:first-child, .btn-group.open .dropdown-menu
 	border-radius 0
